# CNN2

./: .gitignore  CMakeLists.txt  Optimizations Memoire.md  README.md  build.sh  clean_main.py  extract_builders.py  fix_main.py  fix_scope.py  fix_scope2.py  logviewer.sh  output_run_1.txt  play.sh  requirements.sh  robust_clean.py  rocviewer.sh  run.sh  source
.PVS-Studio/State/: ReportState.json
build_bench/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_bench/src/: CNN  CNN2D  DIMS  Makefile  PLAY
build_bench/test/: CTestTestfile.cmake  Makefile  test_ActivationLayer  test_ActivationLayer[1]_include.cmake  test_ActivationLayer[1]_tests.cmake  test_Attention  test_Attention[1]_include.cmake  test_Attention[1]_tests.cmake  test_Augmentation3D  test_Augmentation3D[1]_include.cmake  test_Augmentation3D[1]_tests.cmake  test_CNN  test_CNN[1]_include.cmake  test_CNN[1]_tests.cmake  test_ConvLayer  test_ConvLayer[1]_include.cmake  test_ConvLayer[1]_tests.cmake  test_DenseLayer  test_DenseLayer[1]_include.cmake  test_DenseLayer[1]_tests.cmake  test_Dimensions  test_Dimensions[1]_include.cmake  test_Dimensions[1]_tests.cmake  test_DropoutLayer  test_DropoutLayer[1]_include.cmake  test_DropoutLayer[1]_tests.cmake  test_LossLayer  test_LossLayer[1]_include.cmake  test_LossLayer[1]_tests.cmake  test_Optimizer  test_Optimizer[1]_include.cmake  test_Optimizer[1]_tests.cmake  test_PoolLayer  test_PoolLayer[1]_include.cmake  test_PoolLayer[1]_tests.cmake  test_Sparse  test_Sparse[1]_include.cmake  test_Sparse[1]_tests.cmake  test_Tensor  test_Tensor[1]_include.cmake  (+1 more)
include/: ASTAConv3DLayer.hpp  ActivationLayer.hpp  Augmentation3D.hpp  BatchNorm3DLayer.hpp  Benchmark.hpp  CNN.hpp  CNNBuilder.hpp  CNNLIB.hpp  ConvLayer.hpp  ConvLayer3D.hpp  ConvLayer3DDataParallel.hpp  ConvLayer3DModelParallel.hpp  ConvLayerDataParallel.hpp  ConvLayerModelParallel.hpp  ConvNeXtBlock3D.hpp  ConvNeXtBlock3DSparse.hpp  DataLoader.hpp  DataLoader3D.hpp  DatasetManager.hpp  DenseDownsample3D.hpp  DenseLayer.hpp  DenseLayerDataParallel.hpp  DenseLayerModelParallel.hpp  DepthwiseConvLayer3D.hpp  DepthwiseSparseConv3D.hpp  Dimensions.hpp  DropoutLayer.hpp  FlashAttention3DLayer.hpp  IDataLoader.hpp  ImageLoader.hpp  Layer.hpp  LayerNorm3DLayer.hpp  LayerNorm3DSparse.hpp  LossLayer.hpp  MaxPoolLayer.hpp  MedMNIST3DDataset.hpp  ModelBuilders.hpp  ModelSerializer.hpp  NpyParser.hpp  Optimizer.hpp  (+13 more)
logs/: eval_3d.txt  eval_3d_attn.txt  eval_3d_convnext_dense.txt  eval_3d_convnext_dense_FractureMNIST3D.txt  eval_3d_sparse_NoduleMNIST3D.txt  eval_sparse.txt  eval_sparse_attn.txt  experimentation.txt  predictions_3d.csv  predictions_3d_attn.csv  predictions_3d_convnext_dense.csv  predictions_3d_convnext_dense_FractureMNIST3D.csv  predictions_3d_sparse_NoduleMNIST3D.csv  predictions_sparse.csv  predictions_sparse_attn.csv  py_training_log.txt  train_3d.txt  train_3d_attn.txt  train_3d_convnext_dense_FractureMNIST3D.txt  train_3d_convnext_sparse_FractureMNIST3D.txt  train_3d_dense_NoduleMNIST3D.txt  train_3d_sparse_NoduleMNIST3D.txt  train_sparse.txt  train_sparse_attn.txt  training_log.txt
scripts/: logviewer.py  plot.py  plot_roc.py
src/: CMakeLists.txt  CNN.cpp  CNN2D.cpp  ConvLayer.cpp  ConvLayer3D.cpp  ConvLayer3DDataParallel.cpp  ConvLayer3DModelParallel.cpp  ConvLayerDataParallel.cpp  ConvLayerModelParallel.cpp  DenseLayer.cpp  DenseLayerDataParallel.cpp  DenseLayerModelParallel.cpp  MaxPoolLayer.cpp  dimensions.cpp  eval.cpp  main.cpp  playground.cpp  shared.cpp
test/: CMakeLists.txt  plan.md  test_ActivationLayer.cpp  test_Attention.cpp  test_Augmentation3D.cpp  test_CNN.cpp  test_ConvLayer.cpp  test_ConvNeXtDense.cpp  test_ConvNeXtSparse.cpp  test_DenseLayer.cpp  test_DenseLayerModelParallel.cpp  test_Dimensions.cpp  test_DropoutLayer.cpp  test_LossLayer.cpp  test_Optimizer.cpp  test_PoolLayer.cpp  test_Sparse.cpp  test_Tensor.cpp  test_serialization.cpp
